# ace-pozk

./: README.md
prover/: Cargo.toml
prover/examples/: mock-input.rs
prover/src/: main.rs
test/: test_inputs  test_miner  test_proof  test_publics
verifier/: package.json
verifier/contracts/: Shuffle17.sol  Shuffle17Verifier.sol
verifier/scripts/: deploy.js
